<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activities.MapsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:inputType="text"
        android:textAlignment="center"
        android:hint="@string/address_input_hint"
        android:importantForAutofill="no"
        android:background="@drawable/address_input_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnMoveToLocation"
        app:layout_constraintRight_toLeftOf="@id/btnMoveToLocation"
        app:layout_constraintBottom_toBottomOf="@id/btnMoveToLocation"/>

    <Button
        android:id="@+id/btnMoveToLocation"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/find_button"
        android:onClick="onFindAddress"
        android:background="@drawable/address_input_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <RadioGroup
        android:id="@+id/rgMapType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:layout_constraintTop_toBottomOf="@+id/etAddress"
        app:layout_constraintLeft_toLeftOf="parent">

        <RadioButton
            android:id="@+id/radioNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_normal"
            android:onClick="onChangeMap"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioHybrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_hybrid"
            android:onClick="onChangeMap"/>

        <RadioButton
            android:id="@+id/radioSatellite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_satellite"
            android:onClick="onChangeMap"/>

        <RadioButton
            android:id="@+id/radioTerrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_terrain"
            android:onClick="onChangeMap"/>

        <RadioButton
            android:id="@+id/radioNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_none"
            android:onClick="onChangeMap"/>

    </RadioGroup>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMyLocation"
        android:src="@drawable/map_my_location"
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:maxImageSize="32dp"
        app:backgroundTint="@color/white"
        app:layout_constraintRight_toRightOf="@id/fabLaunchNavigation"
        app:layout_constraintLeft_toLeftOf="@id/fabLaunchNavigation"
        app:layout_constraintBottom_toTopOf="@id/fabLaunchNavigation"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabLaunchNavigation"
        android:src="@drawable/map_directions"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:maxImageSize="32dp"
        app:backgroundTint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>